@@ -1,3 +1,7 @@
+2016-12-13  SilverNexus
+	* CMakeLists.txt: Refactor to use the built-in build configurations.
+	  This should fix Windows builds, too.
+
 2016-12-06  SilverNexus
 	* search.c: Make parse_file be static.
 	* result_list.c: Reduce string copy operations by making each result item
